# ChopSticks

./: CoverageArray.cc  CoverageArray.h  CoverageDistribution.cc  CoverageDistribution.h  DescriptiveStatistics.h  DiscreteDistribution.h  EvidenceFinder.cc  EvidenceFinder.h  FileReader.cc  FileReader.h  GeneralFeature.cc  GeneralFeature.h  LowCoverageFinder.h  Makefile.am  MappingReader.h  Option.cc  Option.h  README  README-bed2fasta.txt  README-fasta2fq.txt  SAMAlignment.cc  SAMAlignment.h  SAMReader.cc  SAMReader.h  SequenceSet.cc  SequenceSet.h  Tool.cc  Tool.h  Utility.cc  Utility.h  bed2fasta.pl  chopsticks.cc  configure.ac  fasta2fq.pl  mkall.sh
